--- a/app/views/question_mailer/asked_question.html.erb
+++ b/app/views/question_mailer/asked_question.html.erb
@@ -1,4 +1,4 @@
-<%= l(:text_question_asked) %> <%= h "##{@issue.id}" %> <%= @question.author %>
+<h1><%= l(:text_question_for_in_by, name: @question.assigned_to, issue: "##{@issue.id}", author: @question.author) %></h1>
 
 <%= textilizable(@journal, :notes, :only_path => false) %>
 
