--- a/app/views/question_mailer/asked_question.text.erb
+++ b/app/views/question_mailer/asked_question.text.erb
@@ -1,4 +1,4 @@
-<%= l(:text_question_asked) %> <%= h "##{@issue.id}" %> <%= @question.author %>
+<%= l(:text_question_for_in_by, name: @question.assigned_to, issue: "##{@issue.id}", author: @question.author) %>
 
 <%= @journal.notes if @journal.notes? %>
 
